# robot_pick_n_place

./: README.md  pyproject.toml
robot_move/: ARbot.cal  detection.py  move.ipynb  plotaxes.py  robot.urdf  robot_urdf.py  sam.py  sam_vis.py  spatial.ipynb
workshop_utils/: AR4_api.py  __init__.py  camera.py  math_utils.py  model.py  realsense_workshop.code-workspace
